# atlomy_chat

./: .aws_credentials  .aws_credentials.example  .env.example  .env.production  .gitignore  CHANGELOG.md  CONFIG_VALIDATOR.md  CONFIG_VALIDATOR_README.md  CONTRIBUTING.md  DEPENDENCY_MANAGEMENT.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_INTEGRATION.md  DEPLOYMENT_STRATEGY.md  DEPLOYMENT_VERIFICATION_CHECKLIST.md  DEPLOYMENT_WALKTHROUGH.md  Dockerfile  Dockerfile.backend  GITHUB_ACTIONS.md  LICENSE  MONITORING_STRATEGY.md  PAGINATION_IMPROVEMENTS_HANDOFF.md  README.md  RELEASE.md  SETUP.md  alembic.ini  check_db.py  check_names_update.py  check_nlp_results.py  check_work_49.py  config_validator.py  deploy.sh  deploy_manager.sh  deployment_readiness.sh  docker-compose.yml  docker_db_connectivity.sh  docker_deploy.sh  docker_entrypoint.sh  ec2_deploy.sh  index_utils.py  (+23 more)
.github/workflows/: ci.yml  database-connectivity.yml  database-restoration.yml  database-validation.yml  dependency-updates.yml  docker-deploy.yml  feature-test.yml  production-deploy.yml
alembic/: env.py
alembic/versions/: 1df4d68ca472_merge_march_2024_heads.py  4b4e34b4f167_merge_lexical_value_heads.py  55e2200734a2_add_unique_constraint_and_handle_.py  71f5065b34ef_initial_migration_create_all_tables.py  9bc4750c6e30_add_reference_code_to_author.py  9f3c17413c41_update_text_division_schema.py  add_author_work_names.py  add_direct_citation_links.py  add_lexical_values_table.py  add_sentence_context_to_citations.py  add_sentence_contexts.py  (+9 more)
app/: __init__.py  api.py  api.py.old  dependencies.py  run_server.py
assets/: beta_convert.ipynb
cline_docs/: CurrentTask.md  LOGGING.md  codebaseSummary.md  context.md  corpus_manager_frontend_guide.md  corpus_manager_user_guide.md  currentTask.md  currentTask.old.md  frontend_guide.md  langchain_docs_reference.md  langgraph_docs_reference.md  nextjs_migration.md  production_branch_readme.md  production_deployment_guide.md  projectRoadmap.md  requirements.md  system_architecture.md  techStack.md  ui_guide.md
data_query_assistant_poc/: galenus_tagged_data.jsonl  playground.py
data_query_assistant_poc.old.old/: text_parsing.py
logs/: atlomy_chat.log.2024-10-16
next-app/: .babelrc  Dockerfile  NODE_VERSION.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
scripts/: restore_database_from_s3.py  stage_database_backup.sh  validate_ec2_database.sh
src/: Untitled-1.py  __init__.py  corpus_manager.py  index_utils.py  lexical_value.py  lexical_value_cli.py  lexical_value_generator.py  lexical_value_prompts.py  lexical_value_storage.py  logging_config.py  parallel_lexical_generator.py  playground.py
src.old/: lexical_value_storage.py  playground.py  test_corpus_manager.py  test_logging.py
static/: app.js  index.html  input.css  styles.css
tests/: fixtures.py  test_corpus_service.py  test_integration.py  test_lexical_service.py  test_lexical_value.py  test_lexical_value_cli.py  test_lexical_value_creation.py  test_lexical_value_generator.py  test_llm_service.py  test_tlg_parser.py
texts/: TLG0057_galen-001.txt  TLG0057_galen-002.txt  TLG0057_galen-003.txt  TLG0057_galen-004.txt  TLG0057_galen-005.txt  TLG0057_galen-006.txt  TLG0057_galen-007.txt  TLG0057_galen-008.txt  TLG0057_galen-009.txt  TLG0057_galen-010.txt  TLG0057_galen-011.txt  TLG0057_galen-012.txt  TLG0057_galen-013.txt  TLG0057_galen-014.txt  TLG0057_galen-015.txt  TLG0057_galen-016.txt  TLG0057_galen-017.txt  TLG0057_galen-018.txt  TLG0057_galen-019.txt  TLG0057_galen-020.txt  TLG0057_galen-021.txt  TLG0057_galen-022.txt  TLG0057_galen-023.txt  TLG0057_galen-024.txt  TLG0057_galen-025.txt  TLG0057_galen-026.txt  TLG0057_galen-027.txt  TLG0057_galen-028.txt  TLG0057_galen-029.txt  TLG0057_galen-030.txt  TLG0057_galen-031.txt  TLG0057_galen-032.txt  TLG0057_galen-033.txt  TLG0057_galen-034.txt  TLG0057_galen-035.txt  TLG0057_galen-036.txt  TLG0057_galen-037.txt  TLG0057_galen-038.txt  TLG0057_galen-039.txt  TLG0057_galen-040.txt  (+182 more)
(+280 files in other folders)
