[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amta"
version = "1.0.0"
description = "A production-ready tool for analyzing ancient medical texts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []  # We'll use requirements.txt for actual dependencies

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
