[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amta"
version = "1.0.0"
description = "A production-ready tool for analyzing ancient medical texts"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Premshay Hermon", email = "atlomy@mail.huji.ac.il"}
]
keywords = ["medical-text", "research", "ancient-texts", "production"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Academic Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
    "Topic :: Text Processing :: Linguistic Processing"
]
dependencies = [
    "pandas==2.2.3",
    "numpy==1.26.4",
    "fastapi==0.111.1",
    "uvicorn==0.22.0",
    "sse-starlette==2.1.3",
    "SQLAlchemy==2.0.36",
    "alembic==1.13.3",
    "asyncpg==0.30.0",
    "redis==5.0.3",
    "boto3==1.35.49",
    "typing-extensions==4.12.2",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "regex==2024.9.11",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "asyncio==3.4.3",
    "loguru==0.7.2"
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "psutil==6.1.0"
]

[project.scripts]
amta = "app.run_server:main"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
